Further increase spacing and add max-width constraints to prevent overlap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -297,13 +297,14 @@ h2 {
 
 .pub-table .media-col {
   width: 30%;
-  padding-right: 25px;
+  padding-right: 30px;
   padding-top: 0;
   padding-bottom: 0;
   vertical-align: top;
   text-align: left;
   position: relative;
-  overflow: visible;
+  overflow: hidden;
+  max-width: 200px;
 }
 
 .pub-table .content-col {
@@ -312,6 +313,7 @@ h2 {
   padding-top: 0;
   padding-bottom: 0;
   padding-left: 0;
+  min-width: 0;
 }
 
 .project-media {
@@ -319,14 +321,16 @@ h2 {
   margin: 0;
   display: block;
   width: 100%;
+  max-width: 100%;
   border-radius: 8px;
-  overflow: visible;
+  overflow: hidden;
   border: none !important;
   padding-top: 0;
   padding-left: 0;
   margin-top: 0;
   margin-bottom: 0;
   line-height: 0;
+  box-sizing: border-box;
 }
 
 .project-media video,
